# AnyTraverse

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  recv_image.py  requirements.txt  roslibpy.bash  test.py  test_listen.py
scripts/: dog-rover-tmux.sh  expose-streamlit.sh  run-dog-rover-streamlit.sh  start_container.zsh
src/anytraverse/: __init__.py  __main__.py
src/anytraverse/config/: pipeline_001.py  pipeline_002.py  utils.py
src/anytraverse/config/datasets/: __init__.py  deepscene.py  rellis.py  rugd.py
src/anytraverse/utils/: __init__.py  _typing.py  roi.py  state.py  trav_pref.py
src/anytraverse/utils/base/: attention_mapping.py  encoder.py  encoding.py  history.py  map_pooler.py  map_pooling.py
src/anytraverse/utils/cli/: __init__.py  logs.py  models.py
src/anytraverse/utils/cli/anal/: __init__.py  viz.py
src/anytraverse/utils/cli/eval/: __init__.py  deepscene.py  rellis.py  rugd.py
src/anytraverse/utils/cli/human_op/: __init__.py  control.py  control2.py  hoc_ctx.py  io.py  models.py  prompt_store.py  video.py
src/anytraverse/utils/cli/nav/: __init__.py  oakd.py  oakd_hybrid.py  oakd_simple.py  oakd_vision.py
src/anytraverse/utils/datasets/: __init__.py  deepscene.py  posix_path_dataset.py  processors.py  rellis.py  rugd.py
src/anytraverse/utils/helpers/: __init__.py  benchmarking.py  grid_costmap.py  mask.py  mask_poolers.py  oakd.py  plane_fit.py  rotation.py  split_tasks.py
src/anytraverse/utils/helpers/human_op/: prompts.py  uncertainty.py
src/anytraverse/utils/helpers/log/: frame_logger.py  frame_publish.py  oakd_nav_logger.py
src/anytraverse/utils/metrics/: roi.py
src/anytraverse/utils/models/: __init__.py  clip.py  clipseg.py  nomic.py
src/anytraverse/utils/modules/: trav_pooling.py  unc_pooling.py
src/anytraverse/utils/pipelines/: __init__.py  base.py  camera_001.py  height_scoring.py  oakd.py  oakd_costmap.py  paper.py  pipeline_002.py  ws_human_op.py
src/anytraverse/utils/viz/: pointcloud.py  results.py  roi.py
src/config/: pipeline_001.py  pipeline_002.py  utils.py
src/config/datasets/: deepscene.py  rellis.py  rugd.py
src/utils/camera/: callibrate.py  camera_calibration.json
src/utils/cli/: __init__.py  frames.py  models.py
src/utils/cli/anal/: __init__.py  viz.py
src/utils/cli/eval/: __init__.py  deepscene.py  rellis.py  rugd.py
src/utils/cli/human_op/: __init__.py  __main__.py  control.py  control2.py  hoc_ctx.py  io.py  models.py  prompt_store.py  prompts.py  ros.py  video.py
src/utils/datasets/: deepscene.py  posix_path_dataset.py  processors.py  rellis.py  rugd.py
src/utils/helpers/: mask.py  pointcloud.py  video.py
src/utils/helpers/human_op/: prompts.py  uncertainty.py
src/utils/helpers/ros/: pub.py  sub.py
src/utils/helpers/streamlit/: extract_frames.py
src/utils/metrics/: cosine.py  iou.py  live_mean_std.py  roi.py
src/utils/models/: __init__.py
src/utils/models/clip/: __init__.py
src/utils/models/clipseg/: __init__.py  model.py  pooler.py
src/utils/models/depth_anything/: model.py
src/utils/models/nvlm/: README.md
src/utils/models/siglip/: __init__.py
src/utils/pipelines/: __init__.py  camera_001.py  frame2vid.py  height_scoring.py  pipeline_001.py  pipeline_002.py  streaming.py  video_001.py
src/utils/viz/: clipseg.py  common.py  depth.py  human_op.py  pipeline.py  pointcloud.py  results.py  roi.py
(+21 files in other folders)
