[project]
name = "anytraverse"
version = "1.0.0"
description = "Offroad Traversability Segmentation with VLM and Human in the Loop"
readme = "README.md"
authors = [
    { name = "Sattwik Kumar Sahu", email = "sattwik21@iiserb.ac.in" },
    { name = "Agamdeep Singh", email = "agamdeep20@iiserb.ac.in" },
    { name = "Karthik Babu Nambiar", email = "karthik23@iiserb.ac.in" },
    { name = "Sujit P B", email = "sujit@iiserb.ac.in" },
]
requires-python = ">=3.12.5"
dependencies = [
    "accelerate>=1.7.0",
    "clip",
    "depthai-sdk>=1.15.1",
    "fastapi>=0.115.12",
    "ftfy>=6.3.1",
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "regex>=2024.11.6",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
    "typer>=0.15.4",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[project.scripts]
anytraverse = "anytraverse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipython>=9.2.0", "jupyter>=1.1.1", "pytest>=8.3.5", "ruff>=0.11.11"]
planning = [
    "pynput>=1.8.1",
    "roboticstoolbox-python>=1.1.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
