[project]
name = "anytraverse"
version = "1.0.4"
description = "Offroad Traversability Segmentation with VLM and Human in the Loop"
readme = "README.md"
authors = [
    { name = "Sattwik Kumar Sahu", email = "sattwik21@iiserb.ac.in" },
    { name = "Agamdeep Singh", email = "agamdeep20@iiserb.ac.in" },
    { name = "Karthik Babu Nambiar", email = "karthik23@iiserb.ac.in" },
    { name = "Sujit P B", email = "sujit@iiserb.ac.in" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
 "pillow>=11.2.1",
 "torch>=2.7.0",
]

[project.scripts]
anytraverse = "anytraverse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
torch = ["torch>=2.7.0", "torchvision>=0.22.0"]
dev = ["ipython>=9.2.0", "jupyter>=1.1.1", "pytest>=8.3.5", "ruff>=0.11.11"]
hf = ["transformers>=4.52.3", "accelerate>=1.7.0", "einops>=0.8.1"]
viz = ["matplotlib>=3.10.3", "seaborn>=0.13.2"]
